change chs font & fix nav bug on mobile devices

--- a/css/default.css
+++ b/css/default.css
@@ -52,9 +52,18 @@
     font-style: normal;
     src: url('/fonts/LXGWNeoZhiSongScreen.woff2') format('woff2');
 }
+@font-face {
+    font-family: 'SourceHanSerifSC';
+    font-weight: normal;
+    font-style: normal;
+    src: url('/fonts/SourceHanSerifSC-VF-subset.woff2') format('woff2');
+}
 
 body {
-    font-family: 'LibertinusSerif', serif;
+    font-family: 'LibertinusSerif', 'SourceHanSerifSC', serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
     font-size: 1.2em;
     line-height: 125%;
     color: black;
@@ -105,6 +114,7 @@ header {
 nav {
     text-align: right;
     border-bottom: solid 1px black;
+    padding-bottom: 2pt;
 }
 
 nav a {
@@ -112,7 +122,12 @@ nav a {
     font-size: 1.4rem;
     color: #555555;
     margin-left: 12px;
-    text-decoration: none
+    display: inline-block;
+    /* line-height: 24px;
+    height: 24px;
+    padding: 0 8px; */
+    vertical-align: middle;
+    text-decoration: none;
 }
 
 .uri {
@@ -350,7 +365,8 @@ ul.posts {
         font-size: 1.4em;
     }
     .navright{
-        overflow: scroll;
+        overflow-x: auto;
+        overflow-y: hidden;
         white-space: nowrap;
     }
 
